upgrade docker and fix cors